@@ -60,6 +60,12 @@ t/corpus/bad_ietf01_1.txt
 t/corpus/bad_ietf01_2.txt
 t/corpus/bad_ietf01_3.txt
 t/corpus/bad_1.txt
+t/corpus/badkey_1.txt
+t/corpus/badkey_2.txt
+t/corpus/badkey_3.txt
+t/corpus/badkey_4.txt
+t/corpus/badkey_5.txt
+t/corpus/badkey_6.txt
 t/corpus/mine_ietf01_1.txt
 t/corpus/mine_ietf01_2.txt
 t/corpus/mine_ietf01_3.txt
