@@ -29,10 +29,8 @@ Signer:
 Testing (some of this may already be implemented):
  - test public key errors:
    - DNS timeout
-   - NXDOMAIN
    - SERVFAIL
    - syntax error in public key record
-   - revoked key
  - test DNS timeout for signing policy
  - test signature options:
    - unspecified query type
@@ -43,20 +41,15 @@ Testing (some of this may already be implemented):
    - bad canonicalization
    - unspecified canonicalization
    - test presence of version tag in signature
- - allow verification tests to succeed without querying live DNS server
+ - IMPORTANT- allow `make test' to work when DNS is not available
 
 Possible issues in base-10 draft:
- - 6.1.2 - NXDOMAIN for public key => PERMFAIL (no key for signature)
  - 6.1.2 - check g= tag of public key against i= tag of signature
  - 6.1.2 - check h= tag of public key against a= tag of signature
- - 6.1.2 - treat empty p= tag as PERMFAIL (key revoked)
- - 3.4.3 - test canonicalization of an empty body
  - 3.5 - t= tag, create it when signing messages, check it when verifying
  - 3.5 - x= tag, create it when signing messages, check it when verifying
- - 3.6.1 - check s= tag of public key
  - 5.4 - allow better control of which headers to sign
  - 5.5 - recommended headers to sign and NOT to sign
  - 3.3.1 - what's an RSA exponent?
  - 6.1.1 - configurable list of unacceptable signing domains,
        e.g. "com" and "co.uk"
-
