@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 39;
+use Test::More tests => 45;
 
 use Mail::DKIM::Verifier;
 
@@ -52,7 +52,7 @@ test_email("bad_ietf01_2.txt", "fail");
 ok($dkim->result_detail =~ /message/, "determined message had been altered");
 test_email("bad_ietf01_3.txt", "fail");
 ok($dkim->result_detail =~ /RSA/, "determined RSA failure");
-test_email("bad_1.txt", "fail");
+test_email("bad_1.txt", "fail"); #openssl error
 print "# " . $dkim->result_detail . "\n";
 SKIP:
 {
@@ -62,13 +62,6 @@ SKIP:
 		qr/OpenSSL/i,
 		"determined OpenSSL error");
 }
-
-test_email("ignore_1.txt", "invalid");
-test_email("ignore_2.txt", "invalid");
-test_email("ignore_3.txt", "invalid");
-test_email("ignore_4.txt", "invalid");
-test_email("ignore_5.txt", "invalid");
-test_email("ignore_6.txt", "invalid");
 
 # test older DomainKeys messages, from Gmail and Yahoo!
 test_email("good_dk_gmail.txt", "pass");
@@ -80,6 +73,27 @@ test_email("good_dk_2.txt", "pass");
 test_email("no_body_1.txt", "pass");
 test_email("no_body_2.txt", "pass");
 test_email("no_body_3.txt", "pass");
+
+#
+# test various problems with the signature itself
+#
+test_email("ignore_1.txt", "invalid"); # unsupported v= tag (v=5)
+test_email("ignore_2.txt", "invalid"); # unsupported a= tag (a=rsa-md5)
+test_email("ignore_3.txt", "invalid"); # unsupported a= tag (a=dsa-sha1)
+test_email("ignore_4.txt", "invalid"); # unsupported c= tag (c=future)
+test_email("ignore_5.txt", "invalid"); # unsupported q= tag (q=http)
+test_email("ignore_6.txt", "invalid"); # unsupported q= tag (q=dns/special)
+
+#
+# test problems with the public key
+#
+test_email("badkey_1.txt", "invalid"); # public key NXDOMAIN
+test_email("badkey_2.txt", "invalid"); # public key REVOKED
+test_email("badkey_3.txt", "invalid"); # public key unsupported v= tag
+test_email("badkey_4.txt", "invalid"); # public key syntax error
+test_email("badkey_5.txt", "invalid"); # public key unsupported k= tag
+test_email("badkey_6.txt", "invalid"); # public key unsupported s= tag
+
 
 sub read_file
 {
